新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -253,7 +253,7 @@
                 </div>
               </li>
               <li class="con_list_item_02">
-                <div class="hurry_up"></div>
+                <div class="direct_recruitment"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -286,7 +286,6 @@
                 </div>
               </li>
               <li class="con_list_item_03">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -319,7 +318,6 @@
                 </div>
               </li>
               <li class="con_list_item_04">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -352,7 +350,6 @@
                 </div>
               </li>
               <li class="con_list_item_05">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -385,7 +382,6 @@
                 </div>
               </li>
               <li class="con_list_item_06">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -418,7 +414,6 @@
                 </div>
               </li>
               <li class="con_list_item_07">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -451,7 +446,6 @@
                 </div>
               </li>
               <li class="con_list_item_08">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -484,7 +478,6 @@
                 </div>
               </li>
               <li class="con_list_item_09">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -517,7 +510,6 @@
                 </div>
               </li>
               <li class="con_list_item_10">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -550,7 +542,6 @@
                 </div>
               </li>
               <li class="con_list_item_11">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -583,7 +574,6 @@
                 </div>
               </li>
               <li class="con_list_item_12">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -616,7 +606,6 @@
                 </div>
               </li>
               <li class="con_list_item_13">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -649,7 +638,6 @@
                 </div>
               </li>
               <li class="con_list_item_14">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -682,7 +670,6 @@
                 </div>
               </li>
               <li class="con_list_item_15">
-                <div class="hurry_up"></div>
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
@@ -717,7 +704,48 @@
             </ul>
           </div>
         </div>
-        <div class="content_right"></div>
+        <div class="content_right">
+          <div class="history">
+            <div class="title">最近浏览过</div>
+            <ul class="history_position_list">
+              <li class="p_list_item">
+                <div class="position_link">
+                  <a class="name" href="">java开发工程师</a>
+                  <div class="salary">15k-22k·13薪</div>
+                  <div class="c_name">法本信息</div>
+                </div>
+              </li>
+              <li class="p_list_item">
+                <div class="position_link">
+                  <a class="name" href="">java开发工程师</a>
+                  <div class="salary">15k-22k·13薪</div>
+                  <div class="c_name">法本信息</div>
+                </div>
+              </li>
+              <li class="p_list_item">
+                <div class="position_link">
+                  <a class="name" href="">java开发工程师</a>
+                  <div class="salary">15k-22k·13薪</div>
+                  <div class="c_name">法本信息</div>
+                </div>
+              </li>
+              <li class="p_list_item">
+                <div class="position_link">
+                  <a class="name" href="">java开发工程师</a>
+                  <div class="salary">15k-22k·13薪</div>
+                  <div class="c_name">法本信息</div>
+                </div>
+              </li>
+              <li class="p_list_item">
+                <div class="position_link">
+                  <a class="name" href="">java开发工程师</a>
+                  <div class="salary">15k-22k·13薪</div>
+                  <div class="c_name">法本信息</div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
