--- a/lagou-web.html
+++ b/lagou-web.html
@@ -703,6 +703,31 @@
               </li>
             </ul>
           </div>
+          <div class="recommend-comp-city">
+            <div class="r_company_tit">推荐公司：</div>
+            <div class="r_company_con">
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+              <a class="r_search_item" href="">美柚</a>
+            </div>
+          </div>
+          <div class="item_con_pager">
+            <a class="previous_page" href="">上一页</a>
+            <a class="page_no pager_is_current" href="">1</a>
+            <a class="num" href="">2</a>
+            <a class="num" href="">3</a>
+            ...
+            <a class="num" href="">30</a>
+            <a class="page_down" href="">下一页</a>
+          </div>
         </div>
         <div class="content_right">
           <div class="history">
@@ -745,8 +770,77 @@
               </li>
             </ul>
           </div>
+          <div class="history">
+            <div class="title">最近浏览过</div>
+          </div>
+          <a class="ad_01" href=""></a>
+          <a class="ad_02" href=""></a>
         </div>
       </div>
     </div>
+    <div id="footer">
+      <div class="inner_wrapper">
+        <div class="footer_module_column">
+          <div class="footer_app">
+            <div class="footer_app_icon"></div>
+            下载拉勾APP
+          </div>
+          <div class="footer_mina">
+            <div class="footer_mina_icon"></div>
+            微信小程序
+            <img src="https://www.lgstatic.com/thumbnail_160x160/image2/M00/6B/22/CgoYOF4W2QiAMqnEAACTzillcXg629.png">
+          </div>
+          <div class="footer_module_item">
+            <div class="footer_wechat">
+              <div class="footer_wechat_icon"></div>
+              拉勾微信
+            </div>
+            <div class="footer_webo">
+              <div class="footer_webo_icon"></div>
+              拉勾微博
+            </div>
+          </div>
+        </div>
+        <div class="footer_module_right">
+          <div class="footer_module_business">
+            <p class="footer_module_title">企业服务</p>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">招聘抢人宝典</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">公司搜索</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">拉钩APP</a>
+          </div>
+          <div class="footer_module_business">
+            <p class="footer_module_title">用户帮助</p>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">用户协议</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">隐私政策</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">在线提问</a>
+          </div>
+          <div class="footer_module_business">
+            <p class="footer_module_title">联系方式</p>
+            <span>服务热线：4006 2828 35 (9:00 -18:00)</span>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">企业服务邮箱：cc@lagou.com</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">联系我们</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="copyright">
+      <div class="copyright_main">
+        <div class="copyright_main_left">
+          <span>©2020 拉勾网 京ICP备14023790号-2</span>
+          <div class="footer_lagou_gongan"></div>
+          <span>京公网安备 11010802024043号</span>
+          <div class="footer_lagou_jubao">
+            <div class="lagou_jubao"></div>
+            <div class="lagou_jubao_icon">
+              <span>违法和不良信息举报</span>
+              <span>电话: 4006 2828 35</span>
+              <span>邮箱: cc@lagou.com</span>
+            </div>
+          </div>
+        </div>
+        <div class="copyright_main_right"></div>
+      </div>
+    </div>
+    <div id="backtop" title="回到顶部"></div>
   </body>
 </html>
