新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -110,10 +110,14 @@
               <a class="hot-city-name" href="">长沙</a>
               <a class="hot-city-name" href="">苏州</a>
               <a class="hot-city-name" href="">天津</a>
-              <a class="btn-more" href="">
+              <div class="btn-more">
                 更多
                 <div class="triangle"></div>
-              </a>
+                <div class="has-more-open">
+                  <span class="title">工作地点：</span>
+                  <a class="current_city" href="">全国</a>
+                </div>
+              </div>
             </div>
             <li class="multi-chosen">
               <span class="title">工作经验：</span>
