--- a/lagou-web.html
+++ b/lagou-web.html
@@ -116,6 +116,23 @@
                 <div class="has-more-open">
                   <span class="title">工作地点：</span>
                   <a class="current_city" href="">全国</a>
+                  <a class="hot-city-name" href="">北京</a>
+                  <a class="hot-city-name" href="">上海</a>
+                  <a class="hot-city-name" href="">深圳</a>
+                  <a class="hot-city-name" href="">广州</a>
+                  <a class="hot-city-name" href="">杭州</a>
+                  <a class="hot-city-name" href="">成都</a>
+                  <a class="hot-city-name" href="">南京</a>
+                  <a class="hot-city-name" href="">武汉</a>
+                  <a class="hot-city-name" href="">西安</a>
+                  <a class="hot-city-name" href="">厦门</a>
+                  <a class="hot-city-name" href="">长沙</a>
+                  <a class="hot-city-name" href="">苏州</a>
+                  <a class="hot-city-name" href="">天津</a>
+                  <div class="btn-more">
+                    更多
+                    <div class="triangle"></div>
+                  </div>
                 </div>
               </div>
             </div>
