新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -133,6 +133,39 @@
                     更多
                     <div class="triangle"></div>
                   </div>
+                  <li class="more_city">
+                    <a class="city_name" href="">重庆</a>
+                    <a class="city_name" href="">郑州</a>
+                    <a class="city_name" href="">青岛</a>
+                    <a class="city_name" href="">合肥</a>
+                    <a class="city_name" href="">福州</a>
+                    <a class="city_name" href="">济南</a>
+                    <a class="city_name" href="">厦门</a>
+                    <a class="city_name" href="">珠海</a>
+                    <a class="city_name" href="">无锡</a>
+                    <a class="city_name" href="">佛山</a>
+                    <a class="city_name" href="">东莞</a>
+                    <a class="city_name" href="">宁波</a>
+                    <a class="city_name" href="">常州</a>
+                    <a class="city_name" href="">沈阳</a>
+                    <a class="city_name" href="">石家庄</a>
+                    <a class="city_name" href="">昆明</a>
+                    <a class="city_name" href="">南昌</a>
+                    <a class="city_name" href="">南宁</a>
+                    <a class="city_name" href="">哈尔滨</a>
+                    <a class="city_name" href="">海口</a>
+                    <a class="city_name" href="">中山</a>
+                    <a class="city_name" href="">惠州</a>
+                    <a class="city_name" href="">贵阳</a>
+                    <a class="city_name" href="">长春</a>
+                    <a class="city_name" href="">太原</a>
+                    <a class="city_name" href="">嘉兴</a>
+                    <a class="city_name" href="">泰安</a>
+                    <a class="city_name" href="">昆山</a>
+                    <a class="city_name" href="">烟台</a>
+                    <a class="city_name" href="">兰州</a>
+                    <a class="city_name" href="">泉州</a>
+                  </li>
                 </div>
               </div>
             </div>
@@ -189,10 +222,64 @@
               <a class="area" href="">游戏</a>
               <a class="area" href="">消费生活</a>
               <a class="area" href="">硬件</a>
-              <a class="btn-more" href="">
+              <div class="btn-more">
                 更多
                 <div class="triangle"></div>
-              </a>
+                <div class="has-more-open">
+                  <span class="title">工作地点：</span>
+                  <a class="current_city" href="">全国</a>
+                  <a class="hot-city-name" href="">北京</a>
+                  <a class="hot-city-name" href="">上海</a>
+                  <a class="hot-city-name" href="">深圳</a>
+                  <a class="hot-city-name" href="">广州</a>
+                  <a class="hot-city-name" href="">杭州</a>
+                  <a class="hot-city-name" href="">成都</a>
+                  <a class="hot-city-name" href="">南京</a>
+                  <a class="hot-city-name" href="">武汉</a>
+                  <a class="hot-city-name" href="">西安</a>
+                  <a class="hot-city-name" href="">厦门</a>
+                  <a class="hot-city-name" href="">长沙</a>
+                  <a class="hot-city-name" href="">苏州</a>
+                  <a class="hot-city-name" href="">天津</a>
+                  <div class="btn-more">
+                    更多
+                    <div class="triangle"></div>
+                  </div>
+                  <li class="more_city">
+                    <a class="city_name" href="">重庆</a>
+                    <a class="city_name" href="">郑州</a>
+                    <a class="city_name" href="">青岛</a>
+                    <a class="city_name" href="">合肥</a>
+                    <a class="city_name" href="">福州</a>
+                    <a class="city_name" href="">济南</a>
+                    <a class="city_name" href="">厦门</a>
+                    <a class="city_name" href="">珠海</a>
+                    <a class="city_name" href="">无锡</a>
+                    <a class="city_name" href="">佛山</a>
+                    <a class="city_name" href="">东莞</a>
+                    <a class="city_name" href="">宁波</a>
+                    <a class="city_name" href="">常州</a>
+                    <a class="city_name" href="">沈阳</a>
+                    <a class="city_name" href="">石家庄</a>
+                    <a class="city_name" href="">昆明</a>
+                    <a class="city_name" href="">南昌</a>
+                    <a class="city_name" href="">南宁</a>
+                    <a class="city_name" href="">哈尔滨</a>
+                    <a class="city_name" href="">海口</a>
+                    <a class="city_name" href="">中山</a>
+                    <a class="city_name" href="">惠州</a>
+                    <a class="city_name" href="">贵阳</a>
+                    <a class="city_name" href="">长春</a>
+                    <a class="city_name" href="">太原</a>
+                    <a class="city_name" href="">嘉兴</a>
+                    <a class="city_name" href="">泰安</a>
+                    <a class="city_name" href="">昆山</a>
+                    <a class="city_name" href="">烟台</a>
+                    <a class="city_name" href="">兰州</a>
+                    <a class="city_name" href="">泉州</a>
+                  </li>
+                </div>
+              </div>
             </div>
           <div class="btn-collapse-wrapper">
             <a class="arrow" href=""></a>
