新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -365,54 +365,55 @@
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
-                      <a class="position_link" href="">web前端工程师[北京·海淀区]</a>
-                      <span class="format-time">1天前发布</span>
+                      <a class="position_link" href="">小程序前端开发工程师[上海·南京西…]</a>
+                      <span class="format-time">2天前发布</span>
                     </div>
                     <div class="p_bot">
-                      <span class="money">25k-50k</span>
+                      <span class="money">15k-25k</span>
                       <span class="experience_and_educational">经验3-5年 / 本科</span>
                     </div>
                   </div>
                   <div class="company">
                     <div class="company_name">
-                      <a class="name" href="">建信金科</a>
+                      <a class="name" href="">上海万粒</a>
                       <div class="company_mark">
                         <span class="business_license">该企业已上传营业执照并通过资质验证审核</span>
                       </div>
                     </div>
-                    <div class="industry">金融,软件开发 / 不需要融资 / 2000人以上</div>
+                    <div class="industry">移动互联网,广告营销 / A轮 / 15-50人</div>
                   </div>
                   <div class="com_logo"></div>
                 </div>
                 <div class="list_item_bot">
                   <div class="li_b_l">
-                    <span>Vue</span>
-                    <span>TypeScript</span>
-                    <span>Javascript</span>
+                    <span>媒体</span>
+                    <span>前端开发</span>
+                    <span>Web前端</span>
                   </div>
-                  <div class="li_b_r">“几乎不加班；免费公司食堂；和百度前端高T合作”</div>
+                  <div class="li_b_r">“优秀团队；工作环境高大上”</div>
                 </div>
               </li>
               <li class="con_list_item_03">
                 <div class="list_item_top">
                   <div class="position">
                     <div class="p_top">
-                      <a class="position_link" href="">web前端工程师[北京·海淀区]</a>
-                      <span class="format-time">1天前发布</span>
+                      <a class="position_link" href="">
+                        web前端开发工程师[北京·海淀区]</a>
+                      <span class="format-time">2020-10-13</span>
                     </div>
                     <div class="p_bot">
-                      <span class="money">25k-50k</span>
-                      <span class="experience_and_educational">经验3-5年 / 本科</span>
+                      <span class="money">20k-40k</span>
+                      <span class="experience_and_educational">经验不限 / 本科</span>
                     </div>
                   </div>
                   <div class="company">
                     <div class="company_name">
-                      <a class="name" href="">建信金科</a>
+                      <a class="name" href="">快手</a>
                       <div class="company_mark">
                         <span class="business_license">该企业已上传营业执照并通过资质验证审核</span>
                       </div>
                     </div>
-                    <div class="industry">金融,软件开发 / 不需要融资 / 2000人以上</div>
+                    <div class="industry">“福利待遇好”</div>
                   </div>
                   <div class="com_logo"></div>
                 </div>
