新增或修改

--- a/some_exercises_on_DOM.html
+++ b/some_exercises_on_DOM.html
@@ -5,8 +5,8 @@
   <body>
     <button id="border_btn">第一题</button>
     <div id="counter">
-      <div id="display"></div>
-      <button id="counter_btn"></button>
+      <div id="display">开始</div>
+      <button id="counter_btn">第二题</button>
     </div>
     <div id="circle"></div>
   </body>
