--- a/PrototypeChain.html
+++ b/PrototypeChain.html
@@ -7,23 +7,23 @@
 function Foo(name) {
   this.name = name;
   this.age = 20;
-  this.test = "你好，顺序02"
+  this.test = "你好，查找顺序02"
 }
 
 // 二、newFoo是Foo的实例对象
 let newFoo = new Foo("李明");
-newFoo.test = "你好，顺序01"
+newFoo.test = "你好，查找顺序01"
 
 // 三、newFoo的原型，也就是Foo的原型对象是Foo.prototype：
 console.log(`三、${newFoo.__proto__ === Foo.prototype}`)
 Foo.prototype.fn = function() {
   console.log("f");
 }
-Foo.prototype.test = "你好，顺序03";
+Foo.prototype.test = "你好，查找顺序03";
 
 // 四、Foo.prototype的原型是Object.prototype：
 console.log(`四、${Foo.prototype.__proto__ === Object.prototype}`)
-Object.prototype.test = "你好，顺序04";
+Object.prototype.test = "你好，查找顺序04";
 
 
 // 原型链查找顺序：
