--- a/PrototypeChain.html
+++ b/PrototypeChain.html
@@ -15,14 +15,18 @@ let newFoo = new Foo("李明");
 newFoo.test = "你好，查找顺序01"
 
 // 三、newFoo的原型，也就是Foo的原型对象，是Foo.prototype：
-console.log(`三、${newFoo.__proto__ === Foo.prototype}`)
+console.log(`三、${
+  newFoo.__proto__ === Foo.prototype
+}`)
 Foo.prototype.fn = function() {
   console.log("f");
 }
 Foo.prototype.test = "你好，查找顺序03";
 
 // 四、Foo.prototype的原型是Object.prototype：
-console.log(`四、${Foo.prototype.__proto__ === Object.prototype}`)
+console.log(`四、${
+  Foo.prototype.__proto__ === Object.prototype
+}`)
 Object.prototype.test = "你好，查找顺序04";
 
 
