--- a/import_on_demand.html
+++ b/import_on_demand.html
@@ -9,7 +9,7 @@
 <body>
   
 </body>
-<script>
+<script type="module">
   document.onclick = async function() {
     let res = await import("./a.js");
     console.log(res);
