--- a/constructor.html
+++ b/constructor.html
@@ -29,7 +29,7 @@
     constructor(name) {
       this.name = name; //公共属性
       this.age = 20;
-    } //构造函数
+    } //构造函数，用来初始化class
     fn() {
       console.log("...");
     } //公共方法
